parser/src/tests/snapshots/flylang_parser__tests__addition_mul.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        Expr(
            Spanned(
                Add(
                    Spanned(
                        Number(
                            "2",
                        ),
                        0..1,
                    ),
                    Spanned(
                        Mul(
                            Spanned(
                                Number(
                                    "2",
                                ),
                                4..5,
                            ),
                            Spanned(
                                Number(
                                    "2",
                                ),
                                8..9,
                            ),
                        ),
                        4..9,
                    ),
                ),
                0..9,
            ),
        ),
    ],
)
