parser/src/tests/snapshots/flylang_parser__tests__array_indexing.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        Identifier(
                            "a",
                        ),
                        1..2,
                    ),
                    value: Spanned(
                        Array(
                            [
                                Spanned(
                                    Number(
                                        "1",
                                    ),
                                    6..7,
                                ),
                                Spanned(
                                    Number(
                                        "2",
                                    ),
                                    9..10,
                                ),
                                Spanned(
                                    Number(
                                        "3",
                                    ),
                                    12..13,
                                ),
                            ],
                        ),
                        5..14,
                    ),
                },
                1..14,
            ),
        ),
        Expr(
            Spanned(
                Assignment {
                    name: Spanned(
                        Identifier(
                            "b",
                        ),
                        16..17,
                    ),
                    value: Spanned(
                        Add(
                            Spanned(
                                Add(
                                    Spanned(
                                        IndexedAccess {
                                            origin: Spanned(
                                                Identifier(
                                                    "a",
                                                ),
                                                20..21,
                                            ),
                                            index: Spanned(
                                                Number(
                                                    "0",
                                                ),
                                                22..23,
                                            ),
                                        },
                                        20..23,
                                    ),
                                    Spanned(
                                        IndexedAccess {
                                            origin: Spanned(
                                                Identifier(
                                                    "a",
                                                ),
                                                27..28,
                                            ),
                                            index: Spanned(
                                                Number(
                                                    "1",
                                                ),
                                                29..30,
                                            ),
                                        },
                                        27..30,
                                    ),
                                ),
                                20..30,
                            ),
                            Spanned(
                                IndexedAccess {
                                    origin: Spanned(
                                        Identifier(
                                            "a",
                                        ),
                                        34..35,
                                    ),
                                    index: Spanned(
                                        Number(
                                            "2",
                                        ),
                                        36..37,
                                    ),
                                },
                                34..37,
                            ),
                        ),
                        20..37,
                    ),
                },
                16..37,
            ),
        ),
    ],
)
