parser/src/tests/snapshots/flylang_parser__tests__comments.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        Expr(
            Spanned(
                Add(
                    Spanned(
                        Number(
                            "3",
                        ),
                        30..31,
                    ),
                    Spanned(
                        Number(
                            "8",
                        ),
                        34..35,
                    ),
                ),
                30..35,
            ),
        ),
        Expr(
            Spanned(
                Add(
                    Spanned(
                        Number(
                            "4",
                        ),
                        44..45,
                    ),
                    Spanned(
                        Number(
                            "9",
                        ),
                        48..49,
                    ),
                ),
                44..49,
            ),
        ),
    ],
)
