parser/src/tests/snapshots/flylang_parser__tests__empty_record.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Ok(
    [
        RecordDefinition(
            RecordDefinition {
                name: Spanned(
                    "Test",
                    8..12,
                ),
                visibility: Global,
                fields: Spanned(
                    [],
                    13..15,
                ),
            },
        ),
    ],
)
