parser/src/tests/snapshots/flylang_parser__tests__error_01.snap
---
source: parser/src/tests/mod.rs
expression: code
---
Err(
    UnexpectedToken {
        token: Token {
            value: Comma,
            address: Address {
                source: Source {
                    filepath: "<test>",
                    code: "\na, = 8\n    ",
                    line_starts: [
                        0,
                        1,
                        8,
                    ],
                },
                span: 2..3,
            },
        },
    },
)
